Fix z-index Header

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -8,7 +8,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    z-index: 2;
+    z-index: 4;
 }
 .logo{
     font-size: 3rem;
